--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+dist/
+dist-ssr/
 *.local
 
-# Editor directories and files
+# Python virtual env
+.venv/
+
+# Vosk 모델 파일 제외
+backendai/models/
+
+# dotenv
+.env
+
+# macOS
+.DS_Store
+
+# IDE
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+
+# Misc
 *.suo
 *.ntvs*
 *.njsproj
