--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@ dist-ssr/
 .venv/
 
 # Vosk 모델 파일 제외
-backendai/models/
+# .gitignore에 아래 라인 추가
+backendai/models/vosk-model-small-ko-0.22/
+
 
 # dotenv
 .env
@@ -36,3 +38,4 @@ backendai/models/
 *.njsproj
 *.sln
 *.sw?
+backendai/models/vosk-model-small-ko-0.22/
